--- a/likevavo/src/main/resources/application.properties
+++ b/likevavo/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.mvc.hiddenmethod.filter.enabled=true
 # spring.main.allow-bean-definition-overriding=true
 # spring.main.allow-circular-references=true
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
