--- a/likevavo/pom.xml
+++ b/likevavo/pom.xml
@@ -16,6 +16,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<springboot.version>2.5.1</springboot.version>
 	</properties>
 	<dependencies>
 		<dependency>
