--- a/likevavo/src/main/resources/application.properties
+++ b/likevavo/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.mvc.hiddenmethod.filter.enabled=true
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
 # spring.main.allow-circular-references=true
 # spring.main.allow-bean-definition-overriding=true
+# dlya vaiba
